Fixing the unique PAPER PMID issue

--- a/SqLitePython/templates/main.html
+++ b/SqLitePython/templates/main.html
@@ -11,6 +11,10 @@
 
     <div class = "container">
 
+      <form action="/test" method="post">
+        <input type="submit" text= "Test Refresh Graph" onclick="generateGraph()" />
+      </form>
+
       <h1> Pass Variables to Python </h1>
       <h3> Pub date within the last years: <h3>
         <form action="/success" method="post">
