--- a/SqLitePython/templates/main.html
+++ b/SqLitePython/templates/main.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Force-Directed Layout</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//d3js.org/d3.v4.min.js"></script>
     <link type="text/css" rel="stylesheet" href="../force/force.css"/>
   </head>
